@@ -198,7 +198,10 @@ main (int argc, char *argv[])
 	  }
 
 	if (elfmap != NULL && elfmap != MAP_FAILED)
-	  munmap (elfmap, elfmap_size);
+	  {
+	    munmap (elfmap, elfmap_size);
+	    elfmap = NULL;
+	  }
       }
     while (++remaining < argc);
 
